fix minor layout issues

--- a/src/sass/modules/_url-imports.scss
+++ b/src/sass/modules/_url-imports.scss
@@ -1,5 +1,2 @@
 //fonts
 @import url('https://fonts.googleapis.com/css?family=Roboto:300,400,400italic,500,700,700italic|Roboto+Mono:300,400|Roboto+Slab|Material+Icons');
-
-//urls
-$img--footer-bg: url('./images/footer-background.png');
