--- a/src/sass/site/_footer.scss
+++ b/src/sass/site/_footer.scss
@@ -1,8 +1,6 @@
 ._msp-footer {
     width: 100%;
     height: 100px;
-    background-image: $img--footer-bg;
-    background-size: cover;
 
     & &__section {
         margin: auto;
