--- a/src/sass/site/_layout.scss
+++ b/src/sass/site/_layout.scss
@@ -6,5 +6,9 @@
             justify-content: space-between;
         }
     }
+
+    &--container {
+
+    }
 }
 
